--- a/Humidite.html
+++ b/Humidite.html
@@ -24,7 +24,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span></button>
-					<a class="navbar-brand" href="#"><span>Perma</span>Cultor</a>
+					<a class="navbar-brand" href="#"><span>Perm</span>App</a>
 					<ul class="nav navbar-top-links navbar-right">
 						
 						<li class="dropdown"><a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
@@ -90,13 +90,13 @@
 				<li><a href="#">
 					<em class="fa fa-home"></em>
 				</a></li>
-				<li class="active">Charts</li>
+				<li class="active">Humidité</li>
 			</ol>
 		</div><!--/.row-->
 		
 		<div class="row">
 			<div class="col-lg-12">
-				<h1 class="page-header">Charts</h1>
+				<h1 class="page-header">Humiditée du Jardin "Iris"</h1>
 			</div>
 		</div><!--/.row-->
 		
