--- a/temperature.html
+++ b/temperature.html
@@ -26,7 +26,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span></button>
-					<a class="navbar-brand" href="#"><span>Perma</span>Cultor</a>
+					<a class="navbar-brand" href="#"><span>Perm</span>App</a>
 					<ul class="nav navbar-top-links navbar-right">
 						
 						<li class="dropdown"><a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
@@ -63,8 +63,8 @@
 			</div>
 			<div class="divider"></div>
 			<ul class="nav menu">
-				<li class="active"><a href="index.html"><em class="fa fa-home">&nbsp;</em> Accueil</a></li>
-				<li><a href="temperature.html"><em class="fa fa-thermometer-full">&nbsp;</em> Température</a></li>
+				<li><a href="index.html"><em class="fa fa-home">&nbsp;</em> Accueil</a></li>
+				<li class="active"><a href="temperature.html"><em class="fa fa-thermometer-full">&nbsp;</em> Température</a></li>
 				<li><a href="Humidite.html"><em class="fa fa-tint">&nbsp;</em> Humidité</a></li>
 				<li class="parent "><a data-toggle="collapse" href="#sub-item-1">
 				<em class="fa fa-navicon">&nbsp;</em> Vos Jardins <span data-toggle="collapse" href="#sub-item-1" class="icon pull-right"><em class="fa fa-plus"></em></span>
@@ -93,14 +93,14 @@
 				<li><a href="#">
 					<em class="fa fa-home"></em>
 				</a></li>
-				<li class="active">Forms</li>
+				<li class="active">Température</li>
 			</ol>
 		</div>
 		<!--/.row-->
 
 		<div class="row">
 			<div class="col-lg-12">
-				<h1 class="page-header">UI Elements</h1>
+				<h1 class="page-header">Température du Jardin "Iris"</h1>
 			</div>
 		</div>
 		<!--/.row-->
