--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 					<div class="panel panel-teal panel-widget border-right">
 						<div class="row no-padding"><em class="fa fa-xl fa-tint color-blue"></em>
 
-							<div class="large">46 %</div>
+							<div class="large"><span class="number">40.8</span> %</div>
 							<div class="text-muted">Humidité moyenne / 24h</div>
 						</div>
 					</div>
@@ -151,7 +151,7 @@
 				<div class="col-xs-6 col-md-3 col-lg-3 no-padding">
 					<div class="panel panel-blue panel-widget border-right">
 						<div class="row no-padding"><em class="fa fa-xl fa-moon-o color-black"></em>
-							<div class="large">4 °</div>
+							<div class="large"><span class="number">4</span> °</div>
 							<div class="text-muted">T° moyenne la nuit</div>
 						</div>
 					</div>
@@ -159,7 +159,7 @@
 				<div class="col-xs-6 col-md-3 col-lg-3 no-padding">
 					<div class="panel panel-orange panel-widget border-right">
 						<div class="row no-padding"><em class="fa fa-xl fa-sun-o color-orange"></em>
-							<div class="large">13°</div>
+							<div class="large"><span class="number">24.2</span>°</div>
 							<div class="text-muted">T° moyenne la journée</div>
 						</div>
 					</div>
@@ -167,7 +167,7 @@
 				<div class="col-xs-6 col-md-3 col-lg-3 no-padding">
 					<div class="panel panel-red panel-widget ">
 						<div class="row no-padding"><em class="fa fa-xl fa-calendar color-red"></em>
-							<div class="large">J-3</div>
+							<div class="large">J-<span class="number">3</span></div>
 							<div class="text-muted">Pour planter les haricots</div>
 						</div>
 					</div>
@@ -468,6 +468,17 @@
 	<script src="js/app.js"></script>
 	<script type="text/javascript">
 			moment().format();
+			$('.number').each(function () {
+    $(this).prop('Counter',0).animate({
+        Counter: $(this).text()
+    }, {
+        duration: 3000,
+        easing: 'swing',
+        step: function (now) {
+            $(this).text(Math.ceil(now));
+        }
+    });
+});
 	</script>
 
 </body>
